tests/semantica/valid/if/test4.ctds
program 
    {
		bool foo(){
			return true;
		}

		void main(){
			if(foo()) then {
				return;
			}
		}
    }