tests/semantica/invalid/return/test4.ctds
program 
    {
		integer foo(){
			if(true) then {
				return 5;
			} else {
			}
		}

		void main(){
			foo();
		}
		
    }